...
            <objects>
                <tableViewController id="7W4-Fq-e2Q" customClass="TableViewController" customModule="Farmdrop" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="IZZ-wm-4Zp">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Type a producers name" id="LLr-3N-hjX">
                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                        </searchBar>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProducerCell" rowHeight="160" id="UAY-Oh-owM" customClass="ProducerTableViewCell" customModule="Farmdrop" customModuleProvider="target">
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="7W4-Fq-e2Q" id="hod-8A-5Wg"/>
                            <outlet property="delegate" destination="7W4-Fq-e2Q" id="L5t-7r-rZy"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Producers" id="fxx-f4-h2J"/>
                    <connections>
                        <outlet property="searchBar" destination="LLr-3N-hjX" id="pFD-zI-Lb3"/>
                        <segue destination="7jc-H8-zjk" kind="show" identifier="showProducerDetail" id="Rg7-ce-MJv"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Upb-t2-6QB" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
